--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@ https://templatemo.com/tm-546-sixteen-clothing
               <a href="#"><img src="assets/images/product_01.jpg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>Remarkable Coincidences</h4></a>
-                <h6>Shanmugha Balan</h6>
                 <p>Hey! Welcome to our blog. We hope you have a nice time reading our articles.</p>
+                <h6>Shanmugha Balan</h6>
               </div>
             </div>
           </div>
@@ -131,8 +131,8 @@ https://templatemo.com/tm-546-sixteen-clothing
               <a href="#"><img src="assets/images/product_02.jpg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>Venus - the Sexiest Planet in our Solar System</h4></a>
-                <h6>Suyash Kumar</h6>
                 <p>This planet so hot that lead, tin and zinc would melt on contact with its surface.</p>
+                <h6>Suyash Kumar</h6>
               </div>
             </div>
           </div>
@@ -141,16 +141,14 @@ https://templatemo.com/tm-546-sixteen-clothing
               <a href="#"><img src="assets/images/product_03.jpg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>A primer to the Standard Model</h4></a>
-                <h6>$20.45</h6>
                 <p>The Standard Model is one of the most succesful theories to date.</p>
+                <h6>Abhinav Choudhary</h6>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
-
     
     <footer>
       <div class="container">
