--- a/about.html
+++ b/about.html
@@ -52,18 +52,18 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home
+                <a class="nav-link" href="https://bitsphyassoc.github.io">Home
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About Us</a>
+                <a class="nav-link" href="https://bitsphyassoc.github.io/about">About Us</a>
                 <span class="sr-only">(current)</span>
               </li> 
               <li class="nav-item">
                 <a class="nav-link" href="https://bitsphyassoc.github.io/blog">Blog</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Short Posts</a>
+                <a class="nav-link" href="https://www.instagram.com/bits_phyassoc/">Short Posts</a>
               </li>
             </ul>
           </div>
