--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@ https://templatemo.com/tm-546-sixteen-clothing
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><h2>Physics Association, BITS Pilani</h2></a>
+          <a class="navbar-brand" href="index.html"><h2>Physics Association</h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -102,8 +102,8 @@ https://templatemo.com/tm-546-sixteen-clothing
               <p>We are a bunch of nerds trying to promote the beautiful language of physics in all of its true glory. We have a swanky team of students from BITS Pilani, Pilani Campus. We put up articles in our blog right <a href="https://bitsphyassoc.github.io/blog">here</a> and make instagram posts explaining cool physics phenomenon <a href="">here</a>. Be sure to check them out!</p>
               <ul class="social-icons">
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                <li><a href="#"><i class="fa fa-behance"></i></a></li>
+                <li><a href="https://www.linkedin.com/company/physicsassociationbitspilani"><i class="fa fa-linkedin"></i></a></li>
+                <li><a href="https://www.instagram.com/bits_phyassoc/"><i class="fa fa-instagram"></i></a></li>
               </ul>
             </div>
           </div>
@@ -111,7 +111,6 @@ https://templatemo.com/tm-546-sixteen-clothing
       </div>
     </div>
 
-    
     <div class="team-members">
       <div class="container">
         <div class="row">
@@ -130,7 +129,6 @@ https://templatemo.com/tm-546-sixteen-clothing
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                       <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                      <li><a href="#"><i class="fa fa-behance"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -152,7 +150,6 @@ https://templatemo.com/tm-546-sixteen-clothing
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                       <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                      <li><a href="#"><i class="fa fa-behance"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -174,7 +171,6 @@ https://templatemo.com/tm-546-sixteen-clothing
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                       <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                      <li><a href="#"><i class="fa fa-behance"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -196,7 +192,6 @@ https://templatemo.com/tm-546-sixteen-clothing
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                       <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                      <li><a href="#"><i class="fa fa-behance"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -218,7 +213,6 @@ https://templatemo.com/tm-546-sixteen-clothing
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                       <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                      <li><a href="#"><i class="fa fa-behance"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -240,7 +234,6 @@ https://templatemo.com/tm-546-sixteen-clothing
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                       <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                      <li><a href="#"><i class="fa fa-behance"></i></a></li>
                     </ul>
                   </div>
                 </div>
