--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               <h4>Who we are &amp; What we do?</h4>
               <p>We are a bunch of nerds trying to promote the beautiful language of physics in all of its true glory. We have a swanky team of students from BITS Pilani, Pilani Campus. We put up articles in our blog right <a href="https://bitsphyassoc.github.io/blog">here</a> and make instagram posts explaining cool physics phenomenon <a href="">here</a>. Be sure to check them out!</p>
               <ul class="social-icons">
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://www.facebook.com/Physics.Association.BITSPilani/"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="https://www.linkedin.com/company/physicsassociationbitspilani"><i class="fa fa-linkedin"></i></a></li>
                 <li><a href="https://www.instagram.com/bits_phyassoc/"><i class="fa fa-instagram"></i></a></li>
               </ul>
