added pen image

--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-6">
             <div class="right-image">
-              <img src="assets/images/feature-image.jpg" alt="">
+              <img src="https://raw.githubusercontent.com/bitsphyassoc/bitsphyassoc.github.io/main/assets/images/about-heading.jpg" alt="">
             </div>
           </div>
           <div class="col-md-6">
