--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ https://templatemo.com/tm-546-sixteen-clothing
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><h2>Physics Association</h2></a>
+          <a class="navbar-brand" href="index.html"><h2 style="color:red;">Physics</h2> <h2>Association</h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -65,6 +65,11 @@ https://templatemo.com/tm-546-sixteen-clothing
               <li class="nav-item">
                 <a class="nav-link" href="https://www.instagram.com/bits_phyassoc/">Short Posts</a>
               </li>
+            </ul>
+            <ul class="social-icons">
+              <li><a href="https://www.facebook.com/Physics.Association.BITSPilani/"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://www.linkedin.com/company/physicsassociationbitspilani"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.instagram.com/bits_phyassoc/"><i class="fa fa-instagram"></i></a></li>
             </ul>
           </div>
         </div>
@@ -149,28 +154,6 @@ https://templatemo.com/tm-546-sixteen-clothing
         </div>
       </div>
     </div>
-
-    <div class="best-features">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="section-heading">
-              <h2>Follow Us</h2>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="left-content">
-              <ul class="social-icons">
-                <li><a href="https://www.facebook.com/Physics.Association.BITSPilani/"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="https://www.linkedin.com/company/physicsassociationbitspilani"><i class="fa fa-linkedin"></i></a></li>
-                <li><a href="https://www.instagram.com/bits_phyassoc/"><i class="fa fa-instagram"></i></a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
     
     <footer>
       <div class="container">
