--- a/index.html
+++ b/index.html
@@ -65,11 +65,12 @@ https://templatemo.com/tm-546-sixteen-clothing
               <li class="nav-item">
                 <a class="nav-link" href="https://www.instagram.com/bits_phyassoc/">Short Posts</a>
               </li>
-            </ul>
-            <ul class="social-icons">
-              <li><a href="https://www.facebook.com/Physics.Association.BITSPilani/"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="https://www.linkedin.com/company/physicsassociationbitspilani"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="https://www.instagram.com/bits_phyassoc/"><i class="fa fa-instagram"></i></a></li>
+              
+              <ul class="social-icons">
+                <li><a href="https://www.facebook.com/Physics.Association.BITSPilani/"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://www.linkedin.com/company/physicsassociationbitspilani"><i class="fa fa-linkedin"></i></a></li>
+                <li><a href="https://www.instagram.com/bits_phyassoc/"><i class="fa fa-instagram"></i></a></li>
+              </ul>
             </ul>
           </div>
         </div>
@@ -82,7 +83,12 @@ https://templatemo.com/tm-546-sixteen-clothing
       <div class="owl-banner owl-carousel">
         <div class="banner-item">
           <div class="text-content">
-            <h2>Physics Association, BITS Pilani</h2>
+            <h2>If you want to master something, teach it!</h2>
+            <h2><em>- Richard Feynman</em></h2>
+          </div>
+          <div class="text-content">
+            <h4 style="color:red;">PHYSICS ASSOCIATION</h4>
+            <h4>BITS PILANI</h4>
           </div>
         </div>
       </div>
