--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ https://templatemo.com/tm-546-sixteen-clothing
             <h2>If you want to master something, teach it!</h2>
             <h2><em>- Richard Feynman</em></h2>
           </div>
-          <div class="text-content" style="align-self: bottom;">
+          <div class="text-content" style="bottom: 0%;">
             <h4 style="color:red;">PHYSICS ASSOCIATION</h4>
             <h4 style="color:white;">BITS PILANI</h4>
           </div>
