--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@ https://templatemo.com/tm-546-sixteen-clothing
     <div class="banner header-text">
       <div class="owl-banner owl-carousel">
         <div class="banner-item">
-          <div class="text-content">
-            <h2>If you want to master something, teach it!</h2>
+          <div class="text-content-1">
+            <h2 style="font-size: 24px;">If you want to master something, teach it!</h2>
             <h2><em>- Richard Feynman</em></h2>
           </div>
-          <div class="text-content" style="bottom: 0%;">
+          <div class="text-content-2" style="bottom: 0%;">
             <h4 style="color:red;">PHYSICS ASSOCIATION</h4>
             <h4 style="color:white;">BITS PILANI</h4>
           </div>
