--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@ https://templatemo.com/tm-546-sixteen-clothing
       <div class="owl-banner owl-carousel">
         <div class="banner-item">
           <div class="text-content-1">
-            <h2 style="font-size: 24px;">If you want to master something, teach it!</h2>
-            <h2><em>- Richard Feynman</em></h2>
+            <h2 style="font-size: 30px; color:seashell">If you want to master something, teach it!</h2>
+            <h2 style="font-size: 24px; color:silver"><em>- Richard Feynman</em></h2>
           </div>
           <div class="text-content-2" style="bottom: 0%;">
             <h4 style="color:red;">PHYSICS ASSOCIATION</h4>
