added some people

--- a/about.html
+++ b/about.html
@@ -119,6 +119,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               <h2>Our Team Members</h2>
             </div>
           </div>
+
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
@@ -134,12 +135,12 @@ https://templatemo.com/tm-546-sixteen-clothing
                 </div>
               </div>
               <div class="down-content">
-                <h4>Johnny William</h4>
-                <span>CO-Founder</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing itaque corporis nulla.</p>
+                <h4>Anshuman Verma</h4>
+                <span>Secretary</span>
               </div>
             </div>
           </div>
+          
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
@@ -155,33 +156,34 @@ https://templatemo.com/tm-546-sixteen-clothing
                 </div>
               </div>
               <div class="down-content">
-                <h4>Karry Pitcher</h4>
-                <span>Product Expert</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing itaque corporis nulla.</p>
+                <h4>Sahil Jangir</h4>
+                <span>Joint Secretary</span>
               </div>
             </div>
           </div>
+
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_03.jpg" alt="">
+                <img src="assets/images/b.jpeg" alt="">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="https://sbalan7.github.io/"><i class="fa fa-globe"></i></a></li>
+                      <li><a href="https://github.com/sbalan7"><i class="fa fa-github"></i></a></li>
+                      <li><a href="https://www.instagram.com/balance_to_the_force/"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/sbalan7/"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
                 </div>
               </div>
               <div class="down-content">
-                <h4>Michael Soft</h4>
-                <span>Chief Marketing</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing itaque corporis nulla.</p>
+                <h4>Shanmugha Balan</h4>
+                <span>Chief Editor</span>
               </div>
             </div>
           </div>
+
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
@@ -197,12 +199,12 @@ https://templatemo.com/tm-546-sixteen-clothing
                 </div>
               </div>
               <div class="down-content">
-                <h4>Mary Cool</h4>
-                <span>Product Specialist</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing itaque corporis nulla.</p>
+                <h4>Abhijit MB</h4>
+                <span>APOGEE Coordinator</span>
               </div>
             </div>
           </div>
+
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
@@ -218,12 +220,12 @@ https://templatemo.com/tm-546-sixteen-clothing
                 </div>
               </div>
               <div class="down-content">
-                <h4>George Walker</h4>
-                <span>Product Photographer</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing itaque corporis nulla.</p>
+                <h4>Vatsal Pattani</h4>
+                <span>Joint APOGEE Coordinator</span>
               </div>
             </div>
           </div>
+
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
@@ -239,12 +241,201 @@ https://templatemo.com/tm-546-sixteen-clothing
                 </div>
               </div>
               <div class="down-content">
-                <h4>Kate Town</h4>
-                <span>General Manager</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing itaque corporis nulla.</p>
+                <h4>Nehil Singh</h4>
+                <span>Content Team Head</span>
               </div>
             </div>
           </div>
+
+          <div class="col-md-4">
+            <div class="team-member">
+              <div class="thumb-container">
+                <img src="assets/images/team_04.jpg" alt="">
+                <div class="hover-effect">
+                  <div class="hover-content">
+                    <ul class="social-icons">
+                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="down-content">
+                <h4>Taha Raja</h4>
+                <span>Content Team Head</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="team-member">
+              <div class="thumb-container">
+                <img src="assets/images/gurupam.jpg" alt="">
+                <div class="hover-effect">
+                  <div class="hover-content">
+                    <ul class="social-icons">
+                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="down-content">
+                <h4>Gurupam Dixit</h4>
+                <span>Design Team Head</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="team-member">
+              <div class="thumb-container">
+                <img src="assets/images/team_06.jpg" alt="">
+                <div class="hover-effect">
+                  <div class="hover-content">
+                    <ul class="social-icons">
+                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="down-content">
+                <h4>Maaz</h4>
+                <span>Design Team Head</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="team-member">
+              <div class="thumb-container">
+                <img src="assets/images/team_04.jpg" alt="">
+                <div class="hover-effect">
+                  <div class="hover-content">
+                    <ul class="social-icons">
+                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="down-content">
+                <h4>Ansh Mahapatra</h4>
+                <span>Event Co-ordinator</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="team-member">
+              <div class="thumb-container">
+                <img src="assets/images/team_05.jpg" alt="">
+                <div class="hover-effect">
+                  <div class="hover-content">
+                    <ul class="social-icons">
+                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="down-content">
+                <h4>Meet Khatri</h4>
+                <span>Event Co-ordinator</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="team-member">
+              <div class="thumb-container">
+                <img src="assets/images/team_06.jpg" alt="">
+                <div class="hover-effect">
+                  <div class="hover-content">
+                    <ul class="social-icons">
+                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="down-content">
+                <h4>Abhinav Choudhary</h4>
+                <span>Junior Editor</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="team-member">
+              <div class="thumb-container">
+                <img src="assets/images/team_06.jpg" alt="">
+                <div class="hover-effect">
+                  <div class="hover-content">
+                    <ul class="social-icons">
+                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="down-content">
+                <h4>Suyash Kumar</h4>
+                <span>Junior Editor</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="team-member">
+              <div class="thumb-container">
+                <img src="assets/images/team_06.jpg" alt="">
+                <div class="hover-effect">
+                  <div class="hover-content">
+                    <ul class="social-icons">
+                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="down-content">
+                <h4>Aaryav Mishra</h4>
+                <span>Public Relations</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="team-member">
+              <div class="thumb-container">
+                <img src="assets/images/team_06.jpg" alt="">
+                <div class="hover-effect">
+                  <div class="hover-content">
+                    <ul class="social-icons">
+                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="down-content">
+                <h4>Aryan Singh</h4>
+                <span>Public Relations</span>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
