--- a/about.html
+++ b/about.html
@@ -127,9 +127,9 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="https://www.facebook.com/anshuman.verma.313371/"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="https://www.instagram.com/q_halbleiter_3371/"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/anshumanverma1807/"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -148,9 +148,9 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="https://www.facebook.com/sahil.jangir.50115/"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="https://www.instagram.com/skj_sahil/"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/sahil-kumar-jangir-373b231ab"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -192,7 +192,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                   <div class="hover-content">
                     <ul class="social-icons">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
@@ -213,7 +213,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                   <div class="hover-content">
                     <ul class="social-icons">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
@@ -234,7 +234,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                   <div class="hover-content">
                     <ul class="social-icons">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
@@ -255,7 +255,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                   <div class="hover-content">
                     <ul class="social-icons">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
@@ -276,7 +276,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                   <div class="hover-content">
                     <ul class="social-icons">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
@@ -297,7 +297,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                   <div class="hover-content">
                     <ul class="social-icons">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
@@ -318,7 +318,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                   <div class="hover-content">
                     <ul class="social-icons">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
@@ -339,7 +339,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                   <div class="hover-content">
                     <ul class="social-icons">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
@@ -360,7 +360,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                   <div class="hover-content">
                     <ul class="social-icons">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
@@ -381,7 +381,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                   <div class="hover-content">
                     <ul class="social-icons">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
@@ -402,7 +402,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                   <div class="hover-content">
                     <ul class="social-icons">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
@@ -423,7 +423,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                   <div class="hover-content">
                     <ul class="social-icons">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
