added more team

--- a/about.html
+++ b/about.html
@@ -52,8 +52,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="https://bitsphyassoc.github.io">Home
-                </a>
+                <a class="nav-link" href="https://bitsphyassoc.github.io">Home</a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="https://bitsphyassoc.github.io/about">About Us</a>
@@ -208,7 +207,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_05.jpg" alt="">
+                <img src="assets/images/vatsal.jpg" alt="">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -275,9 +274,9 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="https://m.facebook.com/gurupam.dixit"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="https://www.instagram.com/gurupam.dixit/"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/gurupam-dixit-5b4b64166/"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -338,9 +337,9 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="https://www.facebook.com/meet.khatri.1800/"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="https://www.instagram.com/meet._khatri/"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/meet-khatri-13684b206/"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -401,16 +400,16 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="https://twitter.com/AaryavMishra"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="https://www.instagram.com/err_yav/"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/aaryav-mishra-bb176a20a/"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
                 </div>
               </div>
               <div class="down-content">
                 <h4>Aaryav Mishra</h4>
-                <span>Public Relations</span>
+                <span>Public Relations Coordinator</span>
               </div>
             </div>
           </div>
@@ -431,7 +430,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               </div>
               <div class="down-content">
                 <h4>Aryan Singh</h4>
-                <span>Public Relations</span>
+                <span>Public Relations Coordinator</span>
               </div>
             </div>
           </div>
