design and team

--- a/about.html
+++ b/about.html
@@ -317,8 +317,8 @@ https://templatemo.com/tm-546-sixteen-clothing
                   <div class="hover-content">
                     <ul class="social-icons">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="https://www.instagram.com/ansh._.mahapatra/"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/ansh-mahapatra-3b7004200/"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -421,9 +421,9 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="https://twitter.com/AryanSi33620382"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="https://www.instagram.com/aryanfury007/"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/aryan-singh-9282871ba/"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
                 </div>
