--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@ https://templatemo.com/tm-546-sixteen-clothing
       </div>
     </div>  
 
+    <div class="latest-products"></div>
+
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
