--- a/about.html
+++ b/about.html
@@ -228,7 +228,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_06.jpg" alt="">
+                <img src="assets/images/nehil.jpg" alt="">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -312,11 +312,11 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_04.jpg" alt="">
+                <img src="assets/images/ansh.jpg" alt="">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="https://twitter.com/AnshMahapatra1"><i class="fa fa-twitter"></i></a></li>
                       <li><a href="https://www.instagram.com/ansh._.mahapatra/"><i class="fa fa-instagram"></i></a></li>
                       <li><a href="https://www.linkedin.com/in/ansh-mahapatra-3b7004200/"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
