--- a/about.html
+++ b/about.html
@@ -232,9 +232,9 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="https://www.facebook.com/alter.singh.1422"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="https://instagram.com/nehil623"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/nehil-singh-8701b9210"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
                 </div>
