--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_01.jpg" alt="">
+                <img src="assets/images/team_01.jpg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -143,7 +143,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_02.jpg" alt="">
+                <img src="assets/images/team_02.jpg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -164,7 +164,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/b.jpeg" alt="">
+                <img src="assets/images/b.jpeg" alt=""  class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -186,7 +186,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_04.jpg" alt="">
+                <img src="assets/images/team_04.jpg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -207,7 +207,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/vatsal.jpg" alt="">
+                <img src="assets/images/vatsal.jpg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -228,7 +228,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/nehil.jpg" alt="">
+                <img src="assets/images/nehil.jpg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -249,7 +249,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_04.jpg" alt="">
+                <img src="assets/images/team_04.jpg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -270,7 +270,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/gurupam.jpg" alt="">
+                <img src="assets/images/gurupam.jpg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -291,7 +291,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_06.jpg" alt="">
+                <img src="assets/images/team_06.jpg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -312,7 +312,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/ansh.jpg" alt="">
+                <img src="assets/images/ansh.jpg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -333,7 +333,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_05.jpg" alt="">
+                <img src="assets/images/team_05.jpg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -354,7 +354,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_06.jpg" alt="">
+                <img src="assets/images/team_06.jpg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -375,7 +375,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_06.jpg" alt="">
+                <img src="assets/images/team_06.jpg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -396,7 +396,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_06.jpg" alt="">
+                <img src="assets/images/team_06.jpg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -417,7 +417,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_06.jpg" alt="">
+                <img src="assets/images/team_06.jpg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
