--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/b.jpeg" alt=""  class="team-image">
+                <img src="assets/images/b.jpeg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -211,9 +211,9 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="https://www.facebook.com/vatsal.pattani.35"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="https://www.instagram.com/vatsal_pattani/"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/vatsal-pattani-8a4682198"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -396,7 +396,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_06.jpg" alt="" class="team-image">
+                <img src="assets/images/aaryav.jpeg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
