--- a/about.html
+++ b/about.html
@@ -253,9 +253,8 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="https://www.instagram.com/_ta_aja/"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/taha-raja-4b9664216/"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
                 </div>
